--- a/analyses/02_filter_data.Rmd
+++ b/analyses/02_filter_data.Rmd
@@ -8,12 +8,12 @@ jupyter:
     text_representation:
       extension: .Rmd
       format_name: rmarkdown
-      format_version: '1.1'
-      jupytext_version: 1.2.4
+      format_version: '1.2'
+      jupytext_version: 1.4.2
   kernelspec:
-    display_name: Python 3
+    display_name: Python [conda env:run_notebook-b99176dfb05e0522988294512373169f]
     language: python
-    name: python3
+    name: conda-env-run_notebook-b99176dfb05e0522988294512373169f-py
 ---
 
 # Input data and configuration
@@ -26,7 +26,7 @@ try:
 except: 
     print("Could not access params from `r` object. Don't worry if your are running papermill. ")
     input_file = "results/01_process_data/adata.h5ad"
-    output_file = results_dir + "adata.h5ad"
+    output_file = "results/02_filter_data" + "adata.h5ad"
 ```
 
 ```{python include=FALSE}
@@ -186,7 +186,7 @@ print_dim(adata)
 
 Apply `MIN_COUNTS` threshold:
 
-```{python results='hold'}
+```{python results="hold"}
 sc.pp.filter_cells(adata, min_counts=MIN_COUNTS)
 print_dim(adata)
 ```
@@ -318,7 +318,7 @@ print_dim(adata)
 We visualize various confounding factors on the UMAP plot.
 Additional we perform clustering using the Leiden algorithm (Traag et al.).
 
-```{python pca, results="hide"}
+```{python pca, results='hide'}
 sc.tl.pca(adata_vis, svd_solver='arpack')
 sc.pp.neighbors(adata_vis, n_neighbors=10, n_pcs=40)
 sc.tl.umap(adata_vis)
